<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_200"
        android:gravity="center"
        android:text="@string/toast"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_toast"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#9B97A0"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_zero"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_200"
        android:gravity="center"
        android:text="@string/count"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="275dp"
        android:layout_height="320dp"
        android:layout_below="@+id/button_toast"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="-51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#5600897B"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/purple_500"
        android:textSize="160sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_for_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_count"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/back_to_main_screen" />

</RelativeLayout>